🐛fix: global fullscreen scrollbars fixes #6
may need to make optional later for better control.

--- a/global-overlay-scrollbars.user.css
+++ b/global-overlay-scrollbars.user.css
@@ -44,3 +44,6 @@
 ::-webkit-scrollbar-thumb:hover {
   background: var(--webkit-scrollbar-hover) !important;
 }
+::-webkit-full-screen {
+  overflow: auto !important;
+}
